remove excessive styles, add color variables

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body class="body">
   <header class="header fw-bold bs-borderbox d-flex">
-    <div class="td-none d-flex">
-      <img class="logo" src="images/logo.svg" alt="логотип ЖК «Лунное море»">
+    <div class="d-flex">
+      <img class="mr-10px h-50px va-middle" src="images/logo.svg" alt="логотип ЖК «Лунное море»">
       <p>Лунное море</p>
     </div>
     <nav class="ml-auto">
@@ -24,33 +24,33 @@
   </header>
   <main class="mt-header-height">
     <section class="hero-container">
-      <div class=" jc-center fd-column ai-center c-white content-container">
+      <div class="fd-column ai-center secondary content-container">
         <img class="h-200px" src="images/logo.svg" alt="логотип ЖК «Лунное море»">
         <h1 class="mb-0 fs-2em">ЖК «Лунное море»</h1>
         <p class="m-5px00">Место, откуда не хочется улетать</p>
-        <a class="btn mt-10px btn-white" href="#booking">Забронировать</a>
+        <a class="btn mt-10px btn-secondary" href="#booking">Забронировать</a>
       </div>
     </section>
     <section class="scmt-100px" id="advantages">
       <div class="jc-spacebetween content-container">
         <div class="w-30percent">
-          <h2 class="fs-175em">Уникальный вид</h2>
+          <h2>Уникальный вид</h2>
           <p>Вид на космос из вашего окна. Мы построили дома с большими окнами, чтобы вы могли наслаждаться метеоритными потоками.</p>
         </div>
         <div class="w-30percent">
-          <h2 class="fs-175em">Инфраструктура</h2>
+          <h2>Инфраструктура</h2>
           <p>Прекрасные дороги рядом с домом. Много мест для прогулки. Всего в 200 км. от посёлка находится кольцо гор Кордильеры, на которых вы сможете провести незабываемые выходные.</p>
         </div>
         <div class="w-30percent">
-          <h2 class="fs-175em">Близость к Москве</h2>
+          <h2>Близость к Москве</h2>
           <p>При небольшой цене мы располагаемся близко к МКАД. Всего 384 000 километров и вы в самом сердце России.</p>
         </div>
       </div>
     </section>
-    <section class="bg-c-f7 scmt-100px" id="about">
-      <div class="jc-center content-container">
+    <section class="bg-lightgray scmt-100px" id="about">
+      <div class="content-container">
         <div class="mw-520px mr-100">
-          <h2 class="fs-175em">О ЖК «Лунное море»</h2>
+          <h2>О ЖК «Лунное море»</h2>
           <p>Все чаще жители Москвы предпочитают загородный дом городской квартире, к тому же связь с мегаполисом не теряется – современные скоростные трассы позволяют без труда добираться до столицы и обратно.</p>
           <p>Мы построили наши дома на самом близком к Солнцу спутнике, всего в 380 тысяч километров от Земли.</p>
         </div>
@@ -60,22 +60,22 @@
     <section id="places" class="scmt-100px">
       <div class="content-container">
         <img class="h-250px mr-100" src="images/moon-2.jpg" alt="Космонавт на Луне">
-        <div class="places-text">
-          <h2 class="fs-175em">Места для отдыха</h2>
+        <div class="mw-520px">
+          <h2>Места для отдыха</h2>
           <p>Луна обладает всеми условиями для комфортного отдыха от большого города. В вашем распоряжении 22 моря и 18 гор. Самое ближайшее кольцо гор всего в 200 километров от вашей квартиры.</p>
           <p>Дома располагаются в новом районе «Лунные моря». При необходимости есть автобусы до района «Лунный материк».</p>
         </div>
       </div>
     </section>
-    <section id="booking" class="scmt-100px bg-c-f7">
+    <section id="booking" class="scmt-100px bg-lightgray">
       <div class="content-container fd-column ai-center">
-        <h2 class="fs-175em mb-30">Оставьте заявку сегодня!</h2>
-        <form class="w-450 d-flex ai-flexstart fd-column m-0-auto"> 
+        <h2 class="mb-30">Оставьте заявку сегодня!</h2>
+        <form class="w-450 d-flex ai-flexstart fd-column"> 
           <fieldset class="booking-fieldset mb-20 bs-borderbox p-20px">
-            <legend class="c-turquoise fw-bold fs-1p2em">Параметры квартиры</legend>
+            <legend class="formcolor fw-bold fs-1p2em">Параметры квартиры</legend>
             <label class="d-flex p-relative ai-center">
               <span class="booking-label-text fw-bold">Количество комнат:</span> 
-              <select class="booking-input br-5px booking-select" name="rooms">
+              <select class="booking-input booking-select" name="rooms">
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
@@ -84,7 +84,7 @@
             </label>
             <label class="d-flex p-relative ai-center">
               <span class="booking-label-text fw-bold">Отделка:</span> 
-              <select class="booking-input br-5px booking-select" name="interior">
+              <select class="booking-input booking-select" name="interior">
                 <option value="no-interior">Без отделки</option>
                 <option value="with-interior">С отделкой</option>
                 <option value="a-bit">Немного отделки</option>
@@ -93,15 +93,15 @@
             </label>
           </fieldset>
           <fieldset class="booking-fieldset mb-20 bs-borderbox p-20px">
-            <legend class="c-turquoise fw-bold fs-1p2em">Контактная информация</legend>
+            <legend class="formcolor fw-bold fs-1p2em">Контактная информация</legend>
               <label class="d-flex p-relative ai-center"><span class="booking-label-text fw-bold">Имя:</span>
-                <input class="booking-input br-5px" type="text" name="name">
+                <input class="booking-input" type="text" name="name">
               </label>
               <label class="d-flex p-relative ai-center"><span class="booking-label-text fw-bold">Телефон:</span>
-                <input class="booking-input br-5px" type="tel" name="phone">
+                <input class="booking-input" type="tel" name="phone">
               </label> 
               <label class="d-flex p-relative ai-center"><span class="booking-label-text fw-bold">E-mail:</span>
-                <input class="booking-input br-5px" type="email" name="email">
+                <input class="booking-input" type="email" name="email">
               </label>
           </fieldset>
           <button class="btn btn-turquoise">Отправить</button>
@@ -109,24 +109,24 @@
       </div>
     </section>
   </main>
-  <footer class="bgc-darkspace">
-    <div class="jc-spacebetween c-white content-container">
+  <footer class="bgdark">
+    <div class="jc-spacebetween secondary content-container">
       <div>
-        <p class="fw-bold"><img class="logo va-middle" src="images/logo.svg" alt="логотип ЖК «Лунное море»">Лунное море</p>
+        <p class="fw-bold"><img class="mr-10px h-50px va-middle" src="images/logo.svg" alt="логотип ЖК «Лунное море»">Лунное море</p>
         <p class="fs-12px">&#169; 2032 год</p>
       </div>
       <div>
         <h3>Проектная документация</h3>
-        <ul class="c-white">
-          <li><a class="c-white fs-14px c-pointer">Скачать</a></li>
-          <li><a class="c-white fs-14px c-pointer">Посмотреть на сайте</a></li>
+        <ul>
+          <li><a class="secondary fs-14px c-pointer">Скачать</a></li>
+          <li><a class="secondary fs-14px c-pointer">Посмотреть на сайте</a></li>
         </ul>
       </div>
       <div>
         <h3>О застройщике</h3>
         <ul>
-          <li><a class="c-white fs-14px c-pointer">Отзывы</a></li>
-          <li><a class="c-white fs-14px c-pointer">Сайт компании</a></li>
+          <li><a class="secondary fs-14px c-pointer">Отзывы</a></li>
+          <li><a class="secondary fs-14px c-pointer">Сайт компании</a></li>
         </ul>
       </div>
     </div>
